testdata/baselines/reference/tests_cases_compiler_genericTypeAssertions5.ts.ast
SourceFile
  InterfaceDeclaration
    Identifier: ' A'
    MethodSignature
      Identifier: '
    foo'
      StringKeyword
  InterfaceDeclaration
    Identifier: ' B'
    HeritageClause
      ExpressionWithTypeArguments
        Identifier: ' A'
    MethodSignature
      Identifier: '
    bar'
      NumberKeyword
  InterfaceDeclaration
    Identifier: ' C'
    HeritageClause
      ExpressionWithTypeArguments
        Identifier: ' A'
    MethodSignature
      Identifier: '
    baz'
      NumberKeyword
  VariableStatement
    VariableDeclarationList
      VariableDeclaration
        Identifier: ' a'
        TypeReference
          Identifier: ' A'
  VariableStatement
    VariableDeclarationList
      VariableDeclaration
        Identifier: ' b'
        TypeReference
          Identifier: ' B'
  VariableStatement
    VariableDeclarationList
      VariableDeclaration
        Identifier: ' c'
        TypeReference
          Identifier: ' C'
  FunctionDeclaration
    Identifier: ' foo2'
    TypeParameter
      Identifier: 'T'
      TypeReference
        Identifier: ' A'
    Parameter
      Identifier: 'x'
      TypeReference
        Identifier: ' T'
    Block
      VariableStatement
        VariableDeclarationList
          VariableDeclaration
            Identifier: ' y'
            Identifier: ' x'
      ExpressionStatement
        BinaryExpression
          Identifier: '
    y'
          EqualsToken
          Identifier: ' a'
      ExpressionStatement
        BinaryExpression
          Identifier: ' // error: cannot convert A to T
    y'
          EqualsToken
          Identifier: ' b'
      ExpressionStatement
        BinaryExpression
          Identifier: ' // error: cannot convert B to T
    y'
          EqualsToken
          Identifier: ' c'
      ExpressionStatement
        BinaryExpression
          Identifier: ' // error: cannot convert C to T
    y'
          EqualsToken
          TypeAssertionExpression
            TypeReference
              Identifier: 'T'
            Identifier: 'a'
      ExpressionStatement
        BinaryExpression
          Identifier: '
    y'
          EqualsToken
          TypeAssertionExpression
            TypeReference
              Identifier: 'T'
            Identifier: 'b'
      ExpressionStatement
        BinaryExpression
          Identifier: ' // error: cannot convert B to T
    y'
          EqualsToken
          TypeAssertionExpression
            TypeReference
              Identifier: 'T'
            Identifier: 'c'
